<resources>
    <string name="app_name">Quiz Alarm</string>
    <string name="add">Add</string>
    <string name="new_alarm">New Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Ringtone:</string>
    <string name="quiz_theme">Quiz Theme:</string>
    <string name="quiz_difficulty">Quiz Difficulty:</string>
    <string name="all">All</string>
    <string name="animals">Animals</string>
    <string name="music">Music</string>
    <string name="pop_culture">Pop Culture</string>
    <string name="history">History</string>
    <string name="anime">Anime</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="name">name</string>
    <string name="_9_00">9:00</string>
    <string name="theme">theme</string>
    <string name="delete">Delete</string>
    <string name="aegean_sea">Aegean Sea</string>
</resources>
